# calibre-oxide

./: .gitignore  Cargo.toml  build_err.txt  check.txt  check_output.txt  check_output_2.txt  debug_output.txt  err.txt  lit_err.txt  lit_err_2.txt  lit_err_3.txt  lit_success.txt  oeb_reader_error.txt  output.opf  output.txt  output_cli.epub  stderr.txt  stderr_calibre_ebooks.txt  stderr_calibre_ebooks_2.txt  stderr_panic.txt  test_output.txt  test_output_pml.txt  test_results.txt
app/: Cargo.toml
app/src/: main.rs  row.rs  viewer.rs
crates/calibre_ai/: Cargo.toml
crates/calibre_ai/src/: github.rs  google.rs  lib.rs  lm_studio.rs  ollama.rs  open_router.rs  openai.rs  prefs.rs  utils.rs
crates/calibre_conversion/: Cargo.toml
crates/calibre_conversion/src/: lib.rs  pipeline.rs  traits.rs
crates/calibre_conversion/src/oeb/: mod.rs
crates/calibre_conversion/src/plugins/: epub_input.rs  epub_output.rs  mod.rs
crates/calibre_conversion/src/transform/: html_roundtrip.rs  mod.rs
crates/calibre_conversion/tests/: html_transform_test.rs  identity_conversion_test.rs  pipeline_test.rs  transform_test.rs
crates/calibre_db/: Cargo.toml  check_output.txt  test_log.txt  test_log_2.txt  test_log_3.txt  test_log_4.txt  test_output.txt
crates/calibre_db/examples/: add_book_test.rs  list_books.rs
crates/calibre_db/src/: adding.rs  annotations.rs  backend.rs  backup.rs  book.rs  cache.rs  categories.rs  check_library.rs  constants.rs  copy_to_library.rs  covers.rs  errors.rs  fields.rs  lazy.rs  legacy.rs  lib.rs  library.rs  listeners.rs  locking.rs  restore.rs  schema_upgrades.rs  search.rs  tables.rs  utils.rs  view.rs  write.rs
crates/calibre_db/src/cli/: cmd_add.rs  cmd_add_custom_column.rs  cmd_add_format.rs  cmd_backup_metadata.rs  cmd_catalog.rs  cmd_check_library.rs  cmd_clone.rs  cmd_custom_columns.rs  cmd_embed_metadata.rs  cmd_export.rs  cmd_fits_index.rs  cmd_fits_search.rs  cmd_list.rs  cmd_list_categories.rs  cmd_remove.rs  cmd_remove_custom_column.rs  cmd_remove_format.rs  cmd_restore_database.rs  cmd_saved_searches.rs  cmd_search.rs  cmd_set_custom.rs  cmd_set_metadata.rs  cmd_show_metadata.rs  cmd_switch.rs  main_dispatch.rs  mod.rs  utils.rs
crates/calibre_db/src/fts/: connection.rs
crates/calibre_db/src/notes/: connection.rs  exim.rs  mod.rs
crates/calibre_db/tests/: adding_test.rs  annotations_test.rs  backup_restore_test.rs  cli_catalog_test.rs  cli_categories_test.rs  cli_clone_test.rs  cli_export_test.rs  cli_maintenance_test.rs  cli_prefs_metadata_test.rs  cli_remaining_p1_test.rs  cli_remaining_p2_test.rs  cli_remove_test.rs  cli_search_test.rs  cli_stubs_test.rs  connection_test.rs  copy_to_library_test.rs  covers_categories_test.rs  custom_columns_test.rs  fts_test.rs  lazy_test.rs  legacy_db_test.rs  listeners_test.rs  locking_test.rs  notes_test.rs  restore_database_test.rs  schema_test.rs  utils_test.rs  view_test.rs  write_test.rs
crates/calibre_devices/: Cargo.toml
crates/calibre_devices/examples/: list_devices.rs
crates/calibre_devices/src/: interface.rs  lib.rs  scanner.rs
crates/calibre_devices/src/android/: driver.rs  mod.rs
crates/calibre_devices/src/folder_device/: driver.rs  mod.rs
crates/calibre_devices/src/kindle/: apnx.rs  bookmark.rs  driver.rs  mod.rs
crates/calibre_devices/src/kobo/: bookmark.rs  books.rs  db.rs  driver.rs  kobotouch_config.rs  mod.rs
crates/calibre_devices/src/nook/: driver.rs  mod.rs
crates/calibre_devices/src/smart_device_app/: driver.rs  mod.rs
crates/calibre_devices/src/usbms/: driver.rs  mod.rs
crates/calibre_devices/tests/: android_test.rs  device_stubs_test.rs  folder_device_test.rs  interface_test.rs  kindle_test.rs  kobo_test.rs  usbms_test.rs  userdefined_test.rs
crates/calibre_ebooks/: Cargo.toml
crates/calibre_ebooks/examples/: read_metadata.rs  rtf_debug.rs
crates/calibre_ebooks/src/: constants.rs  epub.rs  lib.rs  metadata.rs  opf.rs
crates/calibre_ebooks/tests/: archives_test.rs  author_sort_test.rs  azw4_input_test.rs  chm_input_test.rs  comic_input_test.rs  conversion_utils_test.rs  djvu_input_test.rs  docx_container_test.rs  docx_input_test.rs  docx_output_test.rs  epub_input_test.rs  epub_output_test.rs  fb2_input_test.rs  fb2_output_test.rs  full_cycle_test.rs  html_input_test.rs  html_output_impl_test.rs  htmlz_input_test.rs  htmlz_output_test.rs  lit_input_test.rs  lit_output_test.rs  lrf_input_test.rs  lrf_output_test.rs  mobi6_test.rs  mobi_containers_test.rs  mobi_content_test.rs  mobi_headers_test.rs  mobi_huffcdic_test.rs  mobi_index_test.rs  mobi_langcodes_test.rs  mobi_output_test.rs  odt_input_test.rs  odt_output_test.rs  oeb_book_test.rs  oeb_container_test.rs  oeb_metadata_test.rs  oeb_normalize_css_test.rs  oeb_output_test.rs  oeb_parse_utils_test.rs  oeb_reader_test.rs  (+25 more)
crates/calibre_utils/: Cargo.toml
crates/calibre_utils/examples/: demo.rs
crates/calibre_utils/src/: config.rs  config_tests.rs  constants.rs  date.rs  filenames.rs  html2text.rs  icu.rs  imghdr.rs  lib.rs  mem.rs  monotonic.rs  mreplace.rs  network.rs  ordered_dict.rs  random_ua.rs  recycle_bin.rs  resources.rs  search_query_parser.rs  seven_zip.rs  short_uuid.rs  smartypants.rs  socket_inheritance.rs  speedups.rs  terminal.rs  text2int.rs  titlecase.rs  unicode_names.rs  unrar.rs  unsmarten.rs  wordcount.rs  xml_parse.rs
docs/: AGENT_PORTING_GUIDE.md  (+5 more)
(+146 files in other folders)
