[package]
name = "calibre_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bitflags = "2.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
regex = "1.10"
lazy_static = "1.4"
log = "0.4"
anyhow = "1.0"
url = "2.4"
hex = "0.4"
html-escape = "0.2"
tempfile = "3.8"
dirs = "5.0"

[dev-dependencies]
