[package]
name = "calibre_db"
version = "0.1.0"
edition = "2021"

[dependencies]
calibre_utils = { path = "../calibre_utils" }
rusqlite = { version = "0.30", features = ["bundled", "functions"] }
thiserror = "1.0"
log = "0.4"
anyhow = "1.0"
calibre_ebooks = { path = "../calibre_ebooks" }
uuid = { version = "1.0", features = ["v4"] }
