[package]
name = "calibre_db"
version = "0.1.0"
edition = "2021"

[dependencies]
calibre_utils = { path = "../calibre_utils" }
rusqlite = { version = "0.30", features = ["bundled", "functions"] }
thiserror = "1.0"
log = "0.4"
anyhow = "1.0"
calibre_ebooks = { path = "../calibre_ebooks" }
uuid = { version = "1.0", features = ["v4"] }
regex = "1.10"
lazy_static = "1.4"
indexmap = { version = "2.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.2.2"
walkdir = "2.5.0"
clap = { version = "4.5.54", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"

[dev-dependencies]
tempfile = "3.10"
