[package]
name = "calibre_devices"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
calibre_utils = { path = "../calibre_utils" }
calibre_ebooks = { path = "../calibre_ebooks" }
uuid = { version = "1.0", features = ["v4"] }
byteorder = "1.4"

[dev-dependencies]
tempfile = "3.10"
