[package]
name = "calibre_ebooks"
version = "0.1.0"
edition = "2021"

[dependencies]
calibre_utils = { path = "../calibre_utils" }
roxmltree = "0.18"
zip = "0.6"
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
