[package]
name = "calibre_ebooks"
version = "0.1.0"
edition = "2021"

[dependencies]
calibre_utils = { path = "../calibre_utils" }
roxmltree = "0.18"
zip = "0.6"
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5.0"
flate2 = "1.0"
base64 = "0.21"
lopdf = "0.38.0"
bzip2 = "0.4"
clap = { version = "4.4", features = ["derive"] }
url = "2.5"
ignore = "0.4.25"
encoding_rs = "0.8"
tempfile = "3.24.0"
walkdir = "2.4"
urlencoding = "2.1.3"
pulldown-cmark = "0.13.0"
pathdiff = "0.2"
mime_guess = "2.0"
html-escape = "0.2"

[dev-dependencies]
