[package]
name = "calibre_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
directories = "5.0"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "v5"] }
unidecode = "0.3"
html2text = "0.6"
aho-corasick = "1.1.4"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
indexmap = "2.12.1"
roxmltree = "0.21.1"
trash = "5.2.5"
console = "0.16.2"
memory-stats = "1.2.0"
sevenz-rust = "0.6.1"
unrar = "0.5.8"
unicode_names2 = "2.0.0"
socket2 = "0.6.1"
libc = "0.2.178"
